--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
         </developer>
     </developers>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <spotbugs.exclude.filter.file>../config/spotbugs/spotbugs-exclude.xml</spotbugs.exclude.filter.file>
+    </properties>
+
     <scm>
         <connection>scm:git:git@github.com:thegeekyasian/geo-assist.git</connection>
         <developerConnection>scm:git:git@github.com:thegeekyasian/geo-assist.git</developerConnection>
@@ -58,9 +65,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>3.0.2</version>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-maven-plugin</artifactId>
+            <version>4.7.3.0</version>
         </dependency>
     </dependencies>
     <build>
@@ -79,8 +86,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
                 <configuration>
-                    <source>1.8</source>
+                    <source>17</source>
                     <target>1.8</target>
                 </configuration>
             </plugin>
@@ -135,7 +143,6 @@
                 <version>3.2.1</version>
                 <configuration>
                     <configLocation>config/checkstyle/checkstyle.xml</configLocation>
-                    <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
                     <linkXRef>false</linkXRef>
@@ -152,4 +159,13 @@
             </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.7.3.0</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
